# planetloga

./: .env.example  .gitignore  CHANGELOG.md  README.md  ROADMAP.md  TODO.md  Whitepaper.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.cursor/rules/: api.mdc  code-standards.mdc  frontend-design.mdc  frontend.mdc  git-workflow.mdc  project.mdc  solana.mdc  testing.mdc  (+2 more)
contracts/: Anchor.toml  Cargo.toml  README.md
contracts/programs/governance/: Cargo.toml
contracts/programs/governance/src/: error.rs  lib.rs  state.rs
contracts/programs/marketplace/: Cargo.toml
contracts/programs/marketplace/src/: error.rs  lib.rs  state.rs
docs/: ANTWORT-ADAM-AUDIO-BRIEFING.md  ANTWORT-ADAM-PLANETLOGA-FRAGEN.md  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  DOCKSTATION.md  GLOSSARY.md  LOGA-PRIME-ONBOARDING.md  README.md  SECURITY.md
scripts/: 001-create-waitlist.sql  002-create-agents.sql  003-create-tasks.sql  004-create-subtasks.sql  005-create-memory.sql  006-create-activity-log.sql  007-add-owner-id.sql  009-create-aim-ledger.sql  010-add-task-deliverable.sql  011-add-agent-last-seen.sql  012-set-admin-role.sql  013-job-economy.sql  014-sprint8-recruitment-monetization.sql  015-reset-demo-agents.sql  016-lightning-vault.sql  README.md  create-raydium-pool.sh  create-raydium-pool.ts  create-token-metadata.mjs  deploy-mainnet.sh  generate-api-key.ts  initialize-aim.mjs  mainnet-deploy.sh  register-loga-prime.cjs  register-loga-prime.mjs  run-migration.mjs  seed-activity.mjs  seed-marketplace.mjs  seed-memory.mjs
supabase/: config.toml
(+211 files in other folders)
