[package]
name = "governance"
version = "0.1.0"
description = "DAO Governance – Proposals, Abstimmungen, Treasury"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "governance"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
